added sheets for power, weaknesses, vulnerability

--- a/lang/en.json
+++ b/lang/en.json
@@ -259,8 +259,8 @@
     "name.placeholder": "Name",
     "description.label": "Description",
     "gear": {
-      "tags.label": "Tags",
-      "load.label": "Load"
+      "tags.label": "Tags:",
+      "load.label": "Load:"
     },
     "contact": {
       "blown.label": "Blown?",
